--- a/css/_search-panel.css
+++ b/css/_search-panel.css
@@ -21,7 +21,7 @@
 
 .xv-search-field {
 	width:80%;
-	max-width:40em;
+	max-width:60em;
 }
 
 .xv-search-panel .xv-search-result {
